--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "author": "Amir Raminfar <findamir@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^6.5.1",
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "concurrently": "^3.1.0",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
     "jquery": "^3.1.1",
+    "postcss-loader": "^1.1.0",
+    "style-loader": "^0.13.1",
     "typed.js": "^1.1.1",
     "webpack": "^2.1.0-beta.25"
   },
