--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "extract-text-webpack-plugin": "^2.0.0-beta",
     "jquery": "^3.1.1",
     "lost": "^7.1.0",
+    "normalize.css": "^5.0.0",
+    "postcss-cssnext": "^2.8.0",
+    "postcss-import": "^8.1.3",
     "postcss-loader": "^1.1.0",
+    "precss": "^1.4.0",
     "style-loader": "^0.13.1",
     "typed.js": "^1.1.1",
     "webpack": "^2.1.0-beta.25"
