--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-preset-es2015": "^6.18.0",
     "concurrently": "^3.1.0",
     "css-loader": "^0.25.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta",
+    "extract-text-webpack-plugin": "^1.0.1",
     "jquery": "^3.1.1",
     "lost": "^7.1.0",
     "normalize.css": "^5.0.0",
@@ -27,7 +27,7 @@
     "precss": "^1.4.0",
     "style-loader": "^0.13.1",
     "typed.js": "^1.1.1",
-    "webpack": "^2.1.0-beta.25"
+    "webpack": "^1.13.3"
   },
   "scripts": {
     "start": "concurrently 'webpack --watch' 'hugo server --buildDrafts'",
