--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^3.1.0",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "highlight.js": "^9.8.0",
     "jquery": "^3.1.1",
     "lost": "^7.1.0",
     "normalize.css": "^5.0.0",
