--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "precss": "^1.4.0",
     "style-loader": "^0.13.1",
     "typed.js": "^1.1.1",
+    "url-loader": "^0.5.7",
     "webpack": "2.1.0-beta.25"
   },
   "scripts": {
