--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "@babel/plugin-transform-runtime": "^7.5.0",
     "autoprefixer": "^9.6.1",
     "bulma": "^0.7.5",
+    "bulma-prefers-dark": "0.1.0-beta.0",
     "d3": "^5.9.7",
     "del-cli": "^2.0.0",
     "gh-pages": "^2.0.1",
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-static-files-copy": "^2.1.2",
     "postcss-font-magician": "^2.2.2",
-    "sass": "^1.22.3"
+    "sass": "^1.22.4"
   }
 }
