--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "wave.js",
   "scripts": {
     "prebuild": "npx del dist",
-    "build": "npx parcel build index.html",
+    "build": "npx parcel build --no-source-maps index.html",
     "dev": "npx parcel index.html",
-    "predeploy": "npm run build --no-source-maps",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist -b master"
   },
   "repository": {
