--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "del-cli": "^3.0.0",
     "gh-pages": "^2.1.1",
     "parcel-bundler": "^1.12.3",
+    "parcel-plugin-inline-source": "^1.0.0",
     "parcel-plugin-purgecss": "^2.1.3",
     "parcel-plugin-static-files-copy": "^2.2.1",
     "postcss-font-magician": "^2.2.2",
