--- a/package.json
+++ b/package.json
@@ -1,39 +1,24 @@
 {
-  "name": "waves",
-  "version": "1.0.0",
-  "description": "",
-  "main": "wave.js",
+  "name": "amirraminfar.com",
+  "version": "0.0.0",
   "scripts": {
-    "prebuild": "npx del dist",
-    "build": "npx parcel build --no-source-maps index.html",
-    "dev": "npx parcel index.html",
-    "predeploy": "npm run build",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d dist -b master"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/amir20/waves.git"
+  "devDependencies": {
+    "vite": "^2.0.1"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/amir20/waves/issues"
-  },
-  "homepage": "https://github.com/amir20/waves#readme",
   "dependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/plugin-transform-runtime": "^7.6.0",
-    "autoprefixer": "^9.6.1",
-    "bulma": "^0.8.2",
-    "bulma-prefers-dark": "0.1.0-beta.0",
-    "d3": "^5.12.0",
-    "del-cli": "^3.0.0",
-    "gh-pages": "^2.1.1",
-    "parcel-bundler": "^1.12.3",
-    "parcel-plugin-inline-source": "^1.0.0",
-    "parcel-plugin-purgecss": "^2.1.3",
-    "parcel-plugin-static-files-copy": "^2.2.1",
-    "postcss-font-magician": "^2.2.2",
-    "sass": "^1.22.12"
+    "@fullhuman/postcss-purgecss": "^4.0.0",
+    "bulma": "^0.9.2",
+    "bulma-prefers-dark": "^0.1.0-beta.0",
+    "d3": "^6.5.0",
+    "gh-pages": "^3.1.0",
+    "postcss": "^8.2.6",
+    "postcss-font-magician": "^3.0.0",
+    "sass": "^1.32.8"
   }
 }
