--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "predeploy": "yarn build",
+    "predeploy": "yarn build && cp static/* dist",
     "deploy": "gh-pages -d dist -b master"
   },
   "devDependencies": {
