--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
     "preview": "http-server dist/static"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^4.0.0",
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.6",
     "@vue/server-renderer": "^3.0.6",
+    "autoprefixer": "^10.2.4",
     "express": "^4.17.1",
     "gh-pages": "^3.1.0",
     "http-server": "^0.12.3",
     "postcss": "^8.2.6",
     "postcss-font-magician": "^3.0.0",
+    "postcss-nested": "^5.0.4",
     "sass": "^1.32.8",
     "serve-static": "^1.14.1",
+    "tailwindcss": "^2.0.3",
     "vite": "^2.0.1"
   },
   "dependencies": {
-    "bulma": "^0.9.2",
-    "bulma-prefers-dark": "^0.1.0-beta.0",
     "d3": "^6.5.0",
     "vue": "^3.0.6",
     "vue-router": "^4.0.4"
