--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preview": "http-server dist/static"
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.1",
     "@vitejs/plugin-vue": "^1.1.5",
     "@vue/compiler-sfc": "^3.0.7",
     "@vue/server-renderer": "^3.0.7",
