--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vite": "^2.3.7"
   },
   "dependencies": {
+    "@vueuse/head": "^0.6.0",
     "d3": "^6.7.0",
     "vue": "^3.1.1",
     "vue-router": "^4.0.8"
